integration/tests/error_multipart_form_data.err
error: File ReadAccess
  --> tests/error_multipart_form_data.hurl:4:15
   |
 4 | upload1: file,unknown;
   |               ^^^^^^^ File tests/unknown can not be read
   |

